20110605 z80/{z80_checks.h,z80_ops.c}: add 0x3ff8 to 0x3fff trap, and move
         0x007c trap to the right place.
20110605 peripherals/spectranet.c: implement debugger events for Spectranet
         being (un)paged.
20110605 machine.c,peripherals/disk/{beta.c,disciple.c,opus.c,plusd.c},
         peripherals/speccyboot.c: set 'writable = 0' when loading ROM images
         rather than setting it explicitly (Stuart).
20110605 memory.c,peripherals/{nic/{Makefile.am,w5100.[ch]},spectranet.[ch]}:
         add stub W5100 emulation.
20110606 memory.[ch],peripherals/disk/opus.c: guard against overrun of Opus RAM
         buffer by increasing the amount allocated (Stuart).
20110606 peripherals/{disk/{beta.[ch],disciple.c,plusd.c},ide/{divide.c,
         zxatasp.c,zxcf.c},if1.c,if2.c,speccyboot.c}: allow page sizes other
         than 8KB (Stuart).
20110606 z80/z80.c: Spectranet should page in on NMI (patch #3312599)
         (Guesser).
20110606 peripherals/spectranet.c,roms/{README.copyright,spectranet.rom}: add
         full Spectranet ROM (patch 3312600) (Guesser).
20110606 memory.h: switch to 4Kb page size.
20110606 z80/coretest.c: fix for 4Kb page size (patch #3312596) (Guesser).
20110606 ui/win32/{debugger.c,pokefinder.c,pokefinder.rc}: fix Win32 build
         (Sergio Baldoví)
20110607 configure.in,Makefile.am,memory.c,peripherals/{Makefile.am,
         flash/{am29f010.[ch],Makefile.am},spectranet.[ch]},
         roms/{Makefile.am,README.copyright,spectranet.rom},settings.dat,
         ui/options.dat,z80/{z80.c,z80_checks.h,z80_ops.c}: add emulation
         of the AMD AM29F010 flash (modified from patch #3313062) (Guesser
         and Phil).
20110608 peripherals/spectranet.c: beginnings of Spectranet snapshot support.
20110610 peripherals/spectranet.c: pretty much working Spectranet snapshot
         support.
20110610 peripherals/spectranet.c: remember to restore Spectranet disabled
         state when restoring from snapshot (thanks, Guesser).